--- a/issue8/authors.yml
+++ b/issue8/authors.yml
@@ -22,3 +22,7 @@ gbenga:
 adetayo:
   name: Adeyemo Adetayo
   email: tyadeyemo@yahoo.com
+
+omolaye:
+  name: Bamidele Omolaye
+  email: bomolaye@oauife.edu.ng
