add issue8 art6

--- a/issue8/authors.yml
+++ b/issue8/authors.yml
@@ -26,3 +26,11 @@ adetayo:
 omolaye:
   name: Bamidele Omolaye
   email: bomolaye@oauife.edu.ng
+
+ayoola:
+  name: Ikumapayi Abayomi Ayoola
+  email: abayomiikumapayi@yahoo.com
+
+adekogbe:
+  name: Olatunbosun Samuel Adekogb
+  email: bosunadekogbe@gmail.com
