add issue 8 art 7

--- a/issue8/authors.yml
+++ b/issue8/authors.yml
@@ -10,10 +10,9 @@ caluede:
   name: Charles Onomudo Aluede
   email: coaluede@gmail.com
 
-
 ealemede:
   name: Emmanuel Oyetunji Alemede
-  email:  emmatunji@yahoo.com
+  email: emmatunji@yahoo.com
 
 gbenga:
   name: Gbenga Oni
@@ -34,3 +33,7 @@ ayoola:
 adekogbe:
   name: Olatunbosun Samuel Adekogb
   email: bosunadekogbe@gmail.com
+
+akande:
+  name: Sunday Olufemi Akande
+  email: olufemi.akande@oouagoiwoye.edu.ng
