add issue 7 article 2 and 3

--- a/issue8/authors.yml
+++ b/issue8/authors.yml
@@ -37,3 +37,15 @@ adekogbe:
 akande:
   name: Sunday Olufemi Akande
   email: olufemi.akande@oouagoiwoye.edu.ng
+
+bizu:
+  name: Benjamin Obeghare Izu
+  email: benjaminizu@gmail.com
+
+avilliers:
+  name: Alethea de Villiers
+  email: ​alethea.DeVilliers@mandela.ac.za
+
+yguo:
+  name: Yuanyuan Guo
+  email: guoy8@mail.uc.edu
