--- a/issue7/authors.yml
+++ b/issue7/authors.yml
@@ -9,3 +9,15 @@ adekogbe:
 ealemede:
   name: Emmanuel Oyetunji Alemede
   email: emmatunji@yahoo.com
+
+kanaka:
+  name: Kanaka Subramaniam
+  email: kanakaphd@gmail.com
+
+smohan:
+  name: Sujatha Mohan
+  email: kanakaphd@gmail.com
+
+kayodem:
+  name: Kayode Morohunfola
+  email: kayodemorohunfola@gmail.com
