--- a/issue7/authors.yml
+++ b/issue7/authors.yml
@@ -8,7 +8,7 @@ adekogbe:
 
 ealemede:
   name: Emmanuel Oyetunji Alemede
-  email: emmatunji@yahoo.com
+  email: emmatunji@yahoo.com, oyetunjiemmanuel072@gmail.com
 
 kanaka:
   name: Kanaka Subramaniam
