add issue07 article 7

--- a/issue7/authors.yml
+++ b/issue7/authors.yml
@@ -21,3 +21,7 @@ smohan:
 kayodem:
   name: Kayode Morohunfola
   email: kayodemorohunfola@gmail.com
+
+haijin:
+  name: Hai Jin
+  email: haihai0516@gmail.com
