--- a/issue6/authors.yml
+++ b/issue6/authors.yml
@@ -13,3 +13,11 @@ xinshao:
 xueliliu:
   name: Xueli Liu
   email: liuxueli@nbu.edu.cn
+
+mmostert:
+  name: Mareli Mostert
+  email: ​marelimostert6@gmail.com
+
+mosusova: 
+  name: Nadezda Mosusova
+  email: mosusova@sbb.rs
