--- a/issue5/authors.yml
+++ b/issue5/authors.yml
@@ -9,3 +9,8 @@ rpohl:
 ywang:
   name: Yingying Wang
   email: yxw241@gmail.com
+
+vandersen:
+  name: Viana Andersen
+  email: vianabr2005@yahoo.com.br
+  
