--- a/issue5/authors.yml
+++ b/issue5/authors.yml
@@ -13,4 +13,12 @@ ywang:
 vandersen:
   name: Viana Andersen
   email: vianabr2005@yahoo.com.br
-  
+
+
+titus:
+  name: Olusegun Stephen Titus
+  email: ostitus@oauife.edu.ng
+
+vkosik:
+  name: Viktor Kosik
+  email: kosikviktor@mail.ru
