--- a/issue4/authors.yml
+++ b/issue4/authors.yml
@@ -1,3 +1,15 @@
 mmarijan:
   name: Maja Marijan
   email: majamarijan@yahoo.com
+
+scvijanovic:
+  name: Snezana Cvijanovic
+  email: snezanacvijanovich@gmail.com
+
+fabiodun:
+  name: Femi Abiodun
+  email: femimusic1@yahoo.com
+
+annagg:
+  name: Anna Galikowska-Gajewska
+  email: a.galikowska@amuz.gda.pl
