--- a/issue4/authors.yml
+++ b/issue4/authors.yml
@@ -13,3 +13,11 @@ fabiodun:
 annagg:
   name: Anna Galikowska-Gajewska
   email: a.galikowska@amuz.gda.pl
+
+titus:
+  name: Olusegun Stephen Titus
+  email: ostitus@oauife.edu.ng
+
+oyetolaolufemi:
+  name: Olufemi Elijah Oyetola
+  email: phemyhoye12@yahoo.com
