add issue3 art3

--- a/issue3/authors.yml
+++ b/issue3/authors.yml
@@ -1,3 +1,11 @@
 caish:
   name: Shuang Cai
-  email: "shuancai@gmail.com"
+  email: matthew.g.quick@outlook.com
+
+mquick:
+  name: Matthew Glenn Quick
+  email: matthew.g.quick@outlook.com
+
+iyanakiev:
+  name: Ivan Kostadinov Yanakiev
+  email: yanakiev.ivan@gmail.com
