add issue3 art5

--- a/issue3/authors.yml
+++ b/issue3/authors.yml
@@ -9,3 +9,11 @@ mquick:
 iyanakiev:
   name: Ivan Kostadinov Yanakiev
   email: yanakiev.ivan@gmail.com
+
+mmarijan:
+  name: Maja Marijan
+  email: majamarijan@yahoo.com
+
+hsie: 
+  name: Hien Sié
+  email: hiensie2002@yahoo.fr
