add issue3 arts4-8

--- a/issue3/authors.yml
+++ b/issue3/authors.yml
@@ -14,6 +14,22 @@ mmarijan:
   name: Maja Marijan
   email: majamarijan@yahoo.com
 
-hsie: 
+hsie:
   name: Hien Sié
   email: hiensie2002@yahoo.fr
+
+sokovikova:
+  name: Natalia V. Sokovikova
+  email: nsok47@mail.ru
+
+ssvenka:
+  name: Svenka Savić
+  email: svenka@eunet.rs
+
+milosm:
+  name: Milos Marijan
+  email: milos.marijan90@gmail.com
+
+vobradovic:
+  name: Vera Obradovic
+  email: obradovic_vera@yahoo.com
