--- a/issue3/authors.yml
+++ b/issue3/authors.yml
@@ -33,3 +33,15 @@ milosm:
 vobradovic:
   name: Vera Obradovic
   email: obradovic_vera@yahoo.com
+
+aibifubara:
+ name: Aiyegbusi Ayoola Ibifubara
+ email: aaiyegbusi@unilag.edu.ng
+
+doufemi:
+  name: Odebiyi Daniel Olufemi
+  email: aaiyegbusi@unilag.edu.ng
+
+ustephen:
+  name: Udegbeh Otito Stephen
+  email: aaiyegbusi@unilag.edu.ng
