--- a/issue2/authors.yml
+++ b/issue2/authors.yml
@@ -13,3 +13,11 @@ fanar:
 shkekana:
   name: Shirley Marang Kekana
   email: phibion@mopipi.ub.bw
+
+amyc:
+ name: Amy Patricia Cadwallader
+ email: apcadwall@gmail.com
+
+sokovikova:
+  name: Natalia V. Sokovikova
+  email: nsok47@mail.ru
