add issue2 art 3-6

--- a/issue2/authors.yml
+++ b/issue2/authors.yml
@@ -21,3 +21,11 @@ amyc:
 sokovikova:
   name: Natalia V. Sokovikova
   email: nsok47@mail.ru
+
+dengliang:
+  name: Deng Liang
+  email: dengliang@msn.com
+
+femia:
+  name: Femi Abiodun
+  email: femoo.femoo@gmail.com
