add issue2 art 7

--- a/issue2/authors.yml
+++ b/issue2/authors.yml
@@ -29,3 +29,7 @@ dengliang:
 femia:
   name: Femi Abiodun
   email: femoo.femoo@gmail.com
+
+sanubarb:
+  name: Sanubar Baghirova
+  email: sanubar.baghirova@gmail.com
