--- a/issue2/authors.yml
+++ b/issue2/authors.yml
@@ -33,3 +33,7 @@ femia:
 sanubarb:
   name: Sanubar Baghirova
   email: sanubar.baghirova@gmail.com
+
+kosik:
+  name: Viktor Ivanovich Kosik
+  email: kosikviktor@mail.ru
