--- a/issue1/authors.yml
+++ b/issue1/authors.yml
@@ -29,3 +29,7 @@ mosusova:
 lizgahl:
   name: Elizabeth Gahl
   email: lizgahl@gmail.com
+
+okononova:
+  name: Olena Kononova
+  email: tatarnikova@ukrpost.ua
