--- a/issue1/authors.yml
+++ b/issue1/authors.yml
@@ -33,3 +33,7 @@ lizgahl:
 okononova:
   name: Olena Kononova
   email: tatarnikova@ukrpost.ua
+
+mmarijan:
+  name: Maja Marijan
+  email: majamarijan@yahoo.com
