--- a/issue1/authors.yml
+++ b/issue1/authors.yml
@@ -37,3 +37,7 @@ okononova:
 mmarijan:
   name: Maja Marijan
   email: majamarijan@yahoo.com
+
+psilkin:
+  name: Petr A. Silkin
+  email: petr.silkin@gmail.com
