--- a/issue1/authors.yml
+++ b/issue1/authors.yml
@@ -41,3 +41,15 @@ mmarijan:
 psilkin:
   name: Petr A. Silkin
   email: petr.silkin@gmail.com
+
+annagg:
+  name: Anna Galikowska-Gajewska
+  email: a.galikowska@amuz.gda.pl
+
+pnaranjo:
+  name: Maria Pilar Naranjo
+  email: pilarnaranjodanza@hotmail.com
+
+dinavoj:
+  name: ​Dina Vojvodić
+  email: dinavojvodic@yahoo.com
