--- a/issue9/authors.yml
+++ b/issue9/authors.yml
@@ -4,3 +4,15 @@ shengya:
 tianruihu:
   name: Tianrui Hu
   email: tianruihu01@gmail.com
+
+titus:
+  name: Olusegun Stephen Titus
+  email: ostitus@oauife.edu.ng
+
+sadejube:
+  name: Samuel A. Adejube
+  email: samadejube@gmail.com
+
+bomolaye:
+  name: Vincent Bamidele Omolaye
+  email: bomolaye@oauife.edu.ng
