--- a/issue9/authors.yml
+++ b/issue9/authors.yml
@@ -16,3 +16,15 @@ sadejube:
 bomolaye:
   name: Vincent Bamidele Omolaye
   email: bomolaye@oauife.edu.ng
+
+gbengaf:
+  name: Gbenga Oluwaseun Falana
+  email: gbengafalana22@gmail.com
+
+alemede:
+  name: Emmanuel Oyetunji Alemede
+  email: Oyetunjiemmanuel072@gmail.com
+
+akinbiola:
+  name: Akinbiola Oluwabusayo
+  email: oluwabusayoakinbiola@gmail.com
