--- a/issue9/authors.yml
+++ b/issue9/authors.yml
@@ -28,3 +28,19 @@ alemede:
 akinbiola:
   name: Akinbiola Oluwabusayo
   email: oluwabusayoakinbiola@gmail.com
+
+stellap:
+  name: Stella Paschalidou
+  email: pashalidou@hmu.gr
+
+annagg:
+  name: Anna Galikowska-Gajewska
+  email: a.galikowska@amuz.gda.pl
+
+igbiog:
+  name: Oghenemudiakevwe Igbi
+  email: o.igbi@uat.edu.ng
+
+ezineigbi:
+  name: Ezinne Igbi
+  email: ezinnesings@gmail.com
