add issue 9 all

--- a/issue9/authors.yml
+++ b/issue9/authors.yml
@@ -44,3 +44,15 @@ igbiog:
 ezineigbi:
   name: Ezinne Igbi
   email: ezinnesings@gmail.com
+
+joeladeleke:
+  name: Samuel Joel Adeleke
+  email: lekejoelmusic@gmail.com
+
+carlosm:
+  name: Klaudia Carlos-Machej
+  email: klaudia.carlos-machej@chopin.edu.pl
+
+ssvenka:
+  name: Svenka Savić
+  email: svenka@eunet.rs
