--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
 		"typecheck": "tsc"
 	},
 	"dependencies": {
-		"@docusaurus/core": "3.5.2",
-		"@docusaurus/preset-classic": "3.5.2",
+		"@docusaurus/core": "^3.6.0",
+		"@docusaurus/preset-classic": "^3.6.0",
 		"@heroicons/react": "^2.1.5",
 		"@mdx-js/react": "^3.0.0",
 		"clsx": "^2.0.0",
@@ -27,9 +27,9 @@
 		"react-dom": "^18.0.0"
 	},
 	"devDependencies": {
-		"@docusaurus/module-type-aliases": "3.5.2",
-		"@docusaurus/tsconfig": "3.5.2",
-		"@docusaurus/types": "3.5.2",
+		"@docusaurus/module-type-aliases": "^3.6.0",
+		"@docusaurus/tsconfig": "^3.6.0",
+		"@docusaurus/types": "^3.6.0",
 		"autoprefixer": "^10.4.20",
 		"postcss": "^8.4.47",
 		"tailwindcss": "^3.4.13",
